# updatebot

./: .gitignore  .python-version  CHANGELOG.md  LICENSE.md  Pipfile  README.md  adjectives.txt  adverbs.txt  config.py  evening_preambles.txt  login  morning_preambles.txt  pyproject.toml  register  requirements.txt  updatebot  updatebot.ini
