[tool.poetry]
name = "updatebot"
version = "1.0.0"
description = "a Mastodon bot that tells you just how it is feeling every day at a set time"
authors = ["Mattie Behrens <mattie@mattiebee.io>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytz = "^2022.7.1"
"Mastodon.py" = "^1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
